[SC-13] feat: add protected atomic catalog updates
